# PrivateSpeech

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cargo_test.yml
example/: config.toml
src/: config.rs  main.rs  menu.rs  tests.rs
