[package]
name = "private_speech"
version = "0.1.0"
edition = "2024"
authors = ["Chase C <hi@chasecares.dev>"]
license = "GPL-2.0-only"

[dependencies]
arboard = { version = "3", features = ["wayland-data-control"] }
reqwest = { version = "0.12", features = ["blocking"] }
url = { version = "2", features = ["serde"] }
ksni = { version = "0.3", default-features = false, features = ["async-io"] }
tokio = { version = "1.46", features = ["full"] }

directories = "6"
rodio = "0.21"
regex = "1.11"
# serde >1.0.184 due to https://github.com/serde-rs/serde/issues/2538
serde = ">1.0.184"
toml = "0.9"
sysinfo = "0.36"


[profile.dev]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
